[package]
name = "c_language"
version = "0.1.0"
authors = ["S.tatsuya <s.tatsuya0123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

links = "hello"
build = "build.rs"

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = "1.0"
