[package]
name = "how_to_async_await"
version = "0.1.0"
authors = ["S.tatsuya <s.tatsuya0123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.1"}
tokio = {version = "0.2", features = ["full"]}
